Resynced with GNU Classpath: cleanups for boolean usage
2004-10-25  Dalibor Topic  <robilad@kaffe.org>

        * libraries/javalib/java/awt/font/TextAttribute.java,
        libraries/javalib/javax/security/auth/spi/package.html,
        libraries/javalib/javax/swing/JComponent.java,
        libraries/javalib/javax/swing/JInternalFrame.java,
        libraries/javalib/javax/swing/table/TableColumn.java,
        libraries/javalib/javax/swing/text/StyleConstants.java:
        Resynced with GNU Classpath.

        2004-10-25  Michael Koch  <konqueror@gmx.de>

        * java/awt/font/TextAttribute.java,
        javax/swing/JComponent.java,
        javax/swing/JInternalFrame.java,
        javax/swing/table/TableColumn.java,
        javax/swing/text/StyleConstants.java:
        Replaced "new Boolean\(boolean\)" with "Boolean.valueOf\(boolean\)".